Leadership through service

--- a/capturing/_posts/2016-12-04-red-bull.md
+++ b/capturing/_posts/2016-12-04-red-bull.md
@@ -1,7 +1,7 @@
 ---
 title: Red Bull
 layout: post
-category: photographing
+category: capturing
 category_image: "/imgs/category/photographing.jpg"
 
 image: "/imgs/posts/2016-12-04-red-bull.jpg"
